# MinotaurOS

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  logo.txt
.cargo/: config.toml
bootloader/: Cargo.toml
bootloader/.cargo/: config.toml
bootloader/src/: boot.asm  linker.ld  main.rs
common/: Cargo.toml
common/.cargo/: config.toml
common/src/: config.rs  lib.rs
common/src/arch/: console.rs  mod.rs
common/src/arch/riscv/: address.rs  mod.rs  page_table.rs  sbi.rs
docs/: conf.typ  debug.md  main.typ  调试.md
docs/components/: cover.typ  figure.typ  outline.typ  prelude.typ  typography.typ
docs/content/: conclusion.typ  driver.typ  filesystem.typ  general.typ  interrupt.typ  memory.typ  net.typ  process.typ  signal.typ
kernel/: Cargo.toml  build.rs
kernel/.cargo/: config.toml
kernel/src/: boot.rs  builtin.rs  config.rs  entry.asm  kobject.rs  linker.ld  logger.rs  main.rs  result.rs
kernel/src/arch/: console.rs  mod.rs
kernel/src/arch/rv64/: address.rs  mod.rs  pte.rs  sbi.rs
kernel/src/board/: mod.rs  qemu.ld  qemu.rs
kernel/src/builtin/: debug.asm  mod.rs  release.asm
kernel/src/debug/: console.rs  ffi.rs  logger.rs  mod.rs  unwind.rs
kernel/src/driver/: dw_apb_uart.rs  ffi.rs  mod.rs  ns16550a.rs  plic.rs  ramdisk.rs  random.rs  tty.rs  virtio.rs  virtnet.rs
kernel/src/driver/jh7110/: SDCard.rs  gpio.rs  mod.rs  spi.rs  spimode.rs  uart.rs
kernel/src/driver/mmc/: jh7110.rs  mod.rs  regs.rs
kernel/src/driver/qemu/: mod.rs  virtio.rs
kernel/src/driver/serial/: dw_apb_uart.rs  mod.rs  ns16550a.rs
kernel/src/driver/virtio/: blk.rs  mod.rs  net.rs
kernel/src/fs/: block_cache.rs  fd.rs  ffi.rs  file.rs  file_system.rs  inode.rs  inode_cache.rs  inotify.rs  mod.rs  page_cache.rs  path.rs  pipe.rs
kernel/src/fs/devfs/: mod.rs  net.rs  null.rs  rtc.rs  tty.rs  unix_socket.rs  urandom.rs  zero.rs
kernel/src/fs/ext4/: inode.rs  mod.rs  wrapper.rs
kernel/src/fs/fat32/: boot_sector.rs  bpb.rs  dir.rs  fat.rs  fsinfo.rs  inode.rs  mod.rs
kernel/src/fs/procfs/: cpuinfo.rs  meminfo.rs  mod.rs  mounts.rs  ndir.rs  self_.rs
kernel/src/fs/procfs/process/: exe.rs  maps.rs  mod.rs  mounts.rs  stat.rs
kernel/src/fs/procfs/sys/: mod.rs
kernel/src/fs/procfs/sys/kernel/: mod.rs  pid_max.rs  printk.rs
kernel/src/fs/tmpfs/: inode.rs  mod.rs
kernel/src/mm/: addr_space.rs  asid.rs  ffi.rs  mod.rs  page_table.rs  protect.rs  sysv_shm.rs  vmas.rs
kernel/src/mm/allocator/: heap.rs  id.rs  mod.rs  user.rs
kernel/src/mm/region/: direct.rs  file.rs  lazy.rs  mod.rs  shared.rs
kernel/src/mm/vmo/: direct.rs  lazy.rs  mod.rs  physical.rs
kernel/src/net/: Note.md  iface.rs  mod.rs  netaddress.rs  port.rs  socket.rs  tcp.rs  udp.rs  unix.rs
kernel/src/process/: aux.rs  ffi.rs  mod.rs  monitor.rs  token.rs
kernel/src/process/thread/: event_bus.rs  mod.rs  resource.rs  tid.rs  wait.rs
kernel/src/processor/: context.rs  hart.rs  mod.rs  tls.rs
kernel/src/sched/: executor.rs  ffi.rs  iomultiplex.rs  mod.rs  time.rs  timer.rs
kernel/src/signal/: ffi.rs  mod.rs
kernel/src/sync/: executor.rs  ffi.rs  futex.rs  mod.rs
kernel/src/sync/mutex/: mod.rs  reentrant.rs  spin.rs  sync.rs
kernel/src/sync/once/: mod.rs
kernel/src/syscall/: fs.rs  misc.rs  mm.rs  mod.rs  net.rs  process.rs  signal.rs  sync.rs  system.rs  time.rs
kernel/src/system/: ffi.rs  mod.rs
kernel/src/task/: mod.rs
kernel/src/trap/: context.rs  kernel.rs  mod.rs  trap.asm  user.rs
kernel/src/utils/: mod.rs
macros/: Cargo.toml
macros/src/: lib.rs
tasks/: Cargo.toml
tasks/src/: build.rs  debug.rs  env.rs  main.rs  run.rs
user/: Cargo.toml
user/.cargo/: config.toml
user/src/: console.rs  lib.rs  linker.ld  syscall.rs
user/src/test/: busybox_cmd.txt
