[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
riscv = { git = "https://github.com/Dr-TSNG/riscv" }
async-task = { version = "4.7", default-features = false }
async-trait = "0.1"
bitflags = "1.3.2"
bitvec-rs = "0.2"
buddy_system_allocator = "0.9"
bytemuck = "1.14"
downcast-rs = { version = "1.2", default-features = false }
futures = { version = "0.3", default-features = false }
lazy_static = { version = "1.4", features = ["spin_no_std"] }
log = "0.4"
lru = "0.12"
num_enum = { version = "0.7.2", default-features = false }
pin-project = "1.1.5"
sbi-spec = "0.0.6"
spin = "0.9"
time = { version = "0.3", default-features = false }
virtio-drivers = "0.6.0"
xmas-elf = "0.7.0"
zerocopy = { version = "0.7", features = ["derive"] }
smoltcp = { version = "0.10.0", default-features = false, features = [
    "alloc",
    "log",
    "medium-ethernet",
    "medium-ip",
    "proto-ipv4",
    "proto-ipv6",
    "proto-dhcpv4",
    "proto-ipv4-fragmentation",
    "socket-udp",
    "socket-tcp",
    "socket-dhcpv4",
    "async",
] }

[features]
board_qemu = []
board_fu740 = []
error = []
warn = []
info = []
debug = []
trace = []
strace = []

default = ["error"]
