[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
macros = { path = "../macros" }
riscv = { git = "https://github.com/Dr-TSNG/riscv" }
lwext4_rust = { git = "https://github.com/Dr-TSNG/lwext4_rust", rev = "a953c7a2" }
smoltcp = { git = "https://github.com/Dr-TSNG/smoltcp", default-features = false, features = [
    "alloc",
    "log",
    "medium-ip",
    "proto-ipv4",
    "proto-ipv6",
    "socket-udp",
    "socket-tcp",
    "async",
] }
aligned = "0.4.2"
async-task = { version = "4.7", default-features = false }
async-trait = "0.1"
bitflags = "2.6"
bitvec-rs = "0.2"
buddy_system_allocator = { version = "0.10", default-features = false, features = ["alloc"] }
bytemuck = { version = "1.14", features = ["derive"] }
crossbeam-queue = { version = "0.3", default-features = false, features = ["alloc"] }
downcast-rs = { version = "1.2", default-features = false }
fdt-rs = { version = "0.4", default-features = false }
futures = { version = "0.3", default-features = false }
goblin = { version = "0.8", default-features = false, features = ["elf32", "elf64", "endian_fd"] }
hashbrown = "0.14"
lazy_static = { version = "1.4", features = ["spin_no_std"] }
log = "0.4"
lru = "0.12"
num_enum = { version = "0.7.2", default-features = false }
pin-project = "1.1.5"
rand = { version = "0.8.5", features = ["alloc", "small_rng"], default-features = false }
sbi-spec = "0.0.7"
spin = "0.9"
tap = "1.0"
time = { version = "0.3", default-features = false }
virtio-drivers = "0.7.4"
zerocopy = { version = "0.7", features = ["derive"] }

[features]
error = []
warn = []
info = []
debug = []
trace = []
strace = []
nocolor = []
tombstone = []

default = ["error"]
